Trying to fix up the disappearing nav bar

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -24,7 +24,7 @@
             </div>
         </header>
         <nav class="navbar navbar-default" role="navigation">
-            <div class="collapse navbar-collapse" id="navbar-our-story">
+            <div class="" id="navbar-our-story">
                 <a href="index.html" class="navbar-icon__container">
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
