--- a/hotel.html
+++ b/hotel.html
@@ -24,7 +24,7 @@
             </div>
         </header>
         <nav class="navbar navbar-default" role="navigation">
-            <div class="collapse navbar-collapse" id="navbar-our-story">
+            <div class="" id="navbar-our-story">
                 <a href="index.html" class="navbar-icon__container">
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
@@ -61,7 +61,16 @@
                         </p>
                         <a href="http://www.fishkill.house.hyatt.com/en/hotel/home.html" target="_blank">more info</a>
                     </div>
+                </div>
+                <div class="col-sm-6">
+                    <a href="http://www.fishkill.house.hyatt.com/en/hotel/home.html" target="_blank">
+                        <img class="hotel__img" src="images/hotel/hyatt.jpg" alt="Hyatt House hotel" />
+                    </a>
+                </div>
+            </div>
 
+            <div class="center-col">
+                <div class="col-sm-6">
                     <div class="hotel__info">
                         <h3 class="page-title">Marriott Courtyard Fishkill</h3>
                         <p>
@@ -75,9 +84,6 @@
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <a href="http://www.fishkill.house.hyatt.com/en/hotel/home.html" target="_blank">
-                        <img class="hotel__img" src="images/hotel/hyatt.jpg" alt="Hyatt House hotel" />
-                    </a>
                     <a href="http://cwp.marriott.com/fhkny/desaiconnellywedding/" target="_blank">
                         <img class="hotel__img" src="images/hotel/courtyard.jpg" alt="Marriott Courtyard hotel" />
                     </a>
