--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="content">
 
                 <nav class="navbar navbar-default" role="navigation">
-                    <div class="collapse navbar-collapse" id="eg-navbar">
+                    <div class="" id="eg-navbar">
                         <a href="index.html" class="navbar-icon__container">
                             <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
                             <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
