Add all pics to gallery. Some tweaking, like bio blurb text

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -57,7 +57,7 @@
                     <div class="groomsman__info">
                         <div class="groomsman__name"><strong>Jesse Ruben</strong></div>
                         <div class="groomsman__relation">Eric's friend from childhood</div>
-                        <div class="groomsman__description">Singer, songwriter, guitarist. Master of jigsaw puzzles and generally interested in everything.</div>
+                        <div class="groomsman__description">Singer, songwriter, guitarist, master of jigsaw puzzles and generally interested in any new adventure.</div>
                     </div>
                 </div>
                 <div class="bridesmaid__container">
@@ -93,7 +93,7 @@
                     <div class="groomsman__info">
                         <div class="groomsman__name"><strong>Ian Connelly</strong></div>
                         <div class="groomsman__relation">Eric's youngest brother</div>
-                        <div class="groomsman__description">Movie screenwriter. Good taste in clothes, music and youtube videos.</div>
+                        <div class="groomsman__description">Film screenwriter with excellent taste in clothes, music and youtube videos.</div>
                     </div>
                 </div>
                 <div class="bridesmaid__container">
@@ -129,7 +129,7 @@
                     <div class="groomsman__info">
                         <div class="groomsman__name"><strong>Jake Horenstein</strong></div>
                         <div class="groomsman__relation">Eric's friend from high school</div>
-                        <div class="groomsman__description">Sports fan, analyst and critic. Skilled at everything from volleyball to cooking buffalo chicken dip.</div>
+                        <div class="groomsman__description">Analyst, critic and fan of everything from sports to comedy to music.</div>
                     </div>
                 </div>
                 <div class="bridesmaid__container">
@@ -147,7 +147,7 @@
                     <div class="groomsman__info">
                         <div class="groomsman__name"><strong>Bryan Latshaw</strong></div>
                         <div class="groomsman__relation">Eric's friend from high school</div>
-                        <div class="groomsman__description">Outwardly foolish but secretly smart. Enjoys his budding gun collection and riding the bus.</div>
+                        <div class="groomsman__description">Successful engineer, despite his best efforts. Enjoys his budding gun collection and riding the bus.</div>
                     </div>
                 </div>
                 <div class="bridesmaid__container">
