--- a/gallery.html
+++ b/gallery.html
@@ -42,8 +42,8 @@
         </nav>
 
 <!-- Begin Page-specific content here -->
+        <h3 class="column-title">Around the World with Gopi and Eric</h3>
         <div class="row">
-            <h3 class="column-title">Around the World with Gopi and Eric</h3>
             <div class="col-sm-12 gallery__row">
                 <div class="gallery__container">
                     <div class="gallery__img-container">
@@ -103,9 +103,9 @@
             <div class="col-sm-12 gallery__row">
                 <div class="gallery__container">
                     <div class="gallery__img-container">
-                        <img class="gallery__img" src="images/gallery/caribbean.jpg" />
+                        <img class="gallery__img" src="images/gallery/disneyworld.jpg" />
                     </div>
-                    <div class="gallery__description"><strong>Caribbean</strong> cruise</div>
+                    <div class="gallery__description"><strong>Disney World</strong> marathon</div>
                 </div>
                 <div class="gallery__container">
                     <div class="gallery__img-container">
@@ -117,15 +117,15 @@
             <div class="col-sm-12 gallery__row">
                 <div class="gallery__container">
                     <div class="gallery__img-container">
-                        <img class="gallery__img" src="images/gallery/disneyworld.jpg" />
+                        <img class="gallery__img" src="images/gallery/caribbean.jpg" />
                     </div>
-                    <div class="gallery__description"><strong>Disney World</strong> marathon</div>
+                    <div class="gallery__description"><strong>Caribbean</strong> cruise</div>
                 </div>
                 <div class="gallery__container">
                     <div class="gallery__img-container">
-                        <img class="gallery__img" src="images/gallery/eg_faces.jpg" />
+                        <img class="gallery__img" src="images/gallery/eg_carrying.jpg" />
                     </div>
-                    <div class="gallery__description"><strong>New York, NY</strong>, picnic in Central Park</div>
+                    <div class="gallery__description"><strong>New York, NY</strong>, photo shoot in Central Park</div>
                 </div>
             </div>
             <div class="col-sm-12 gallery__row">
@@ -159,13 +159,23 @@
             <div class="col-sm-12 gallery__row">
                 <div class="gallery__container">
                     <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/jaipur.jpg" />
+                    </div>
+                    <div class="gallery__description">Riding an elephant up to the fort in <strong>Jaipur, India</strong></div>
+                </div>
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
                         <img class="gallery__img" src="images/gallery/tajmahal.jpg" />
                     </div>
                     <div class="gallery__description">At the Taj Mahal in <strong>Agra, India</strong></div>
                 </div>
             </div>
+        </div>
 
-            <h3 class="column-title">More pictures</h3>
+        <div class="linebreak"></div>
+        <h3 class="column-title">More pictures</h3>
+
+        <div class="row">
             <div class="col-sm-12 gallery__row">
                 <div class="gallery__container">
                     <div class="gallery__img-container">
@@ -206,6 +216,25 @@
                         <img class="gallery__img" src="images/gallery/halloween.jpg" />
                     </div>
                     <div class="gallery__description">As Calvin and Hobbes for Halloween</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="linebreak"></div>
+
+        <div class="row">
+            <div class="col-sm-12 gallery__row">
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/proposal.jpg" />
+                    </div>
+                    <div class="gallery__description">Will you marry me?</div>
+                </div>
+                <div class="gallery__container">
+                    <div class="gallery__img-container">
+                        <img class="gallery__img" src="images/gallery/washsq.jpg" />
+                    </div>
+                    <div class="gallery__description"><strong>Yes!</strong></div>
                 </div>
             </div>
         </div>
