--- a/registry.html
+++ b/registry.html
@@ -52,7 +52,7 @@
                     <span>Work in progress! Please check back later</span>
                 </div>
                 <div class="col-sm-6">
-                    <img class="col-sm-12" src="images/registry/happy.jpg" alt="Presents!" />
+                    <img class="col-sm-12 registry__img" src="images/registry/happy.jpg" alt="Presents!" />
                 </div>
             </div>
         </div>
