Update gopis briday party bios

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -65,7 +65,7 @@
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Medini Ciavardone</strong></div>
                         <div class="bridesmaid__relation">Gopi's friend from childhood</div>
-                        <div class="bridesmaid__description">Gopi's oldest friend and partner in crime.</div>
+                        <div class="bridesmaid__description">Gopi's oldest friend and partner in crime since childhood. #1 fashion/wedding consultant, China Cola fan and wheat-free dessert enthusiast.</div>
                     </div>
                 </div>
             </div>
@@ -82,8 +82,8 @@
                     <img class="party-member bridesmaid__img" src="images/party/lex.jpg" alt="Alexis Patten" />
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Alexis Patten</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from high school</div>
-                        <div class="bridesmaid__description"></div>
+                        <div class="bridesmaid__relation">Gopi's friend from middle school</div>
+                        <div class="bridesmaid__description">Life of the party since their 7th grade social studies project and high school field hockey days.</div>
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Melanie Hyman</strong></div>
                         <div class="bridesmaid__relation">Gopi's friend from college</div>
-                        <div class="bridesmaid__description">PhD student in public health. Shares almost all of Gopi's opinions and major life experiences.</div>
+                        <div class="bridesmaid__description">PhD student in public health and Gopi's life-twin. They share the same sports awards, college degrees, hobbies and general opinions about everything.</div>
                     </div>
                 </div>
             </div>
@@ -119,7 +119,7 @@
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Amanda Baryshyan</strong></div>
                         <div class="bridesmaid__relation">Gopi's friend from college</div>
-                        <div class="bridesmaid__description">Biomedical engineer and proud new mama. Likes board games and new hairstyles.</div>
+                        <div class="bridesmaid__description">Doctor of biomedical engineer and new mother. Active experimenter in the lab and with her nacho creations.</div>
                     </div>
                 </div>
             </div>
@@ -136,8 +136,8 @@
                     <img class="party-member bridesmaid__img" src="images/party/maggie.jpg" alt="Maggie Kissel" />
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Maggie Kissel</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from med school</div>
-                        <div class="bridesmaid__description">Fellow pediatrician</div>
+                        <div class="bridesmaid__relation">Gopi's friend from medical school</div>
+                        <div class="bridesmaid__description">Fellow pediatrician and expert at keeping Gopi sane throughout medical training.</div>
                     </div>
                 </div>
             </div>
@@ -154,8 +154,8 @@
                     <img class="party-member bridesmaid__img" src="images/party/melissa.jpg" alt="Melissa Niedfeld" />
                     <div class="bridesmaid__info">
                         <div class="bridesmaid__name"><strong>Melissa Niedfeld</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from med school</div>
-                        <div class="bridesmaid__description">Fellow pediatrician</div>
+                        <div class="bridesmaid__relation">Gopi's friend from medical school</div>
+                        <div class="bridesmaid__description">Fellow pediatrician and expert online shopper, particularly during board exam studying.</div>
                     </div>
                 </div>
             </div>
