Fixing the font size on welcome index.html page

--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
         <div class="fullscreen-cont">
             <div class="fullscreen-img"></div>
 
-            <div class="title main wedding-font">Gopi & Eric</div>
-            <div class="title date-title wedding-font">10.4.2014</div>
+            <div class="title__container">
+                <div class="title main wedding-font">Gopi & Eric</div>
+                <div class="title date-title wedding-font">10.4.2014</div>
+            </div>
         </div>
 
             <div class="content">
