Fix the navbar for all pages

--- a/registry.html
+++ b/registry.html
@@ -24,15 +24,36 @@
             </div>
         </header>
         <nav class="navbar navbar-default" role="navigation">
-            <div class="" id="navbar-our-story">
+            <div class="visible-xs visible-sm hidden-md hidden-lg" id="eg-navbar-xs">
                 <a href="index.html" class="navbar-icon__container">
+                    <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
+                    <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
+                </a>
+                <ul class="nav navbar-nav">
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Site menu
+                            <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a class="eg-menu-item" href="details.html">Schedule of Events</a></li>
+                            <li><a class="eg-menu-item" href="hotel.html">Hotel</a></li>
+                            <li><a class="eg-menu-item" href="registry.html">Registry</a></li>
+                            <li><a class="eg-menu-item" href="bridal-party.html">Wedding Party</a></li>
+                            <li><a class="eg-menu-item" href="gallery.html">Gallery</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="hidden-xs hidden-sm visible-md visible-lg" id="eg-navbar-default">
+                <a href="index.html" class="navbar-icon__container navbar-icon-default">
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_left.png" />
                     <img class="elephant-icon--small" src="images/red_elephant_transparent_right.png" />
                 </a>
                 <ul class="nav navbar-nav">
                     <li><a href="details.html">Schedule of Events</a></li>
                     <li><a href="hotel.html">Hotel</a></li>
-                    <li><a class="selected" href="registry.html">Registry</a></li>
+                    <li><a href="registry.html">Registry</a></li>
                     <li><a href="bridal-party.html">Wedding Party</a></li>
                     <li><a href="gallery.html">Gallery</a></li>
                 </ul>
