Change wording of details/schedule page

--- a/details.html
+++ b/details.html
@@ -66,9 +66,11 @@
         <div class="row">
             <div class="center-col">
                 <div class="col-sm-6">
-                    <h3>Saturday: Ceremony</h3>
-                    <div>Ceremony and reception will be held on
-                        <strong>Saturday, October 4, 2014</strong>
+                    <h3>Saturday, October 4, 2014</h3>
+                    <div>
+                        <strong>4:45pm</strong>: Buses will depart from the Hyatt House and the Fishkill Marriott
+                        <br><br>
+                        <strong>5:00pm</strong>: Wedding ceremony at
                         <br><br>
                         <strong>The Garrison Golf Club</strong><br>
                         2015 US 9<br>
@@ -76,16 +78,12 @@
                         (845)-424-3604<br>
                         <a href="http://www.thegarrison.com/contact-us.html" target="_blank">more information</a>
                         <br><br>
-                        Further details, including the time of the ceremony, will be provided in the invitations.
-                        Transportation from the Hyatt House and Marriott Courtyard Fishkill hotels.
+                        <strong>11:00pm</strong>: Keep the party going! After party at the bar at the Hyatt House following reception
                     </div>
 
-                    <h3>Saturday: After Party</h3>
-                    <div>The after party will be held at the Hyatt House hotel.
-                    </div>
-
-                    <h3>Sunday: Brunch</h3>
-                    <div>Brunch will be served Sunday morning at the Hyatt House hotel.
+                    <h3>Sunday, October 5, 2014</h3>
+                    <div>
+                        <strong>8:00-11:00am</strong>: Brunch at the Hyatt House
                     </div>
                 </div>
                 <div class="col-sm-6">
