--- a/details.html
+++ b/details.html
@@ -70,7 +70,7 @@
                     <div>
                         <strong>4:45pm</strong>: Buses will depart from the Hyatt House and the Fishkill Marriott
                         <br><br>
-                        <strong>5:00pm</strong>: Wedding ceremony at
+                        <strong>5:00pm</strong>: Wedding ceremony and reception at
                         <br><br>
                         <strong>The Garrison Golf Club</strong><br>
                         2015 US 9<br>
