Dont need a full "body" class on home page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/welcome.css" />
     </head>
-    <body class="content">
+    <body>
         <div class="fullscreen-cont">
             <div class="fullscreen-img"></div>
 
