--- a/hotel.html
+++ b/hotel.html
@@ -12,6 +12,7 @@
         <link rel="icon" type="image/png" href="images/favicon.png" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/main.css" />
+        <script src="js/googleanalytics.js"></script>
     </head>
     <body class="content-container">
         <header>
