--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="css/bootstrap.min.css" />
         <link rel="stylesheet" href="css/main.css" />
         <link rel="stylesheet" href="css/welcome.css" />
+        <script src="js/googleanalytics.js"></script>
     </head>
     <body>
         <div class="fullscreen-cont">
