possible party page, going from 4 cols to 2 to 1

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -73,6 +73,26 @@
                 </h3>
             </div>
 
+            <div class="row">
+                <div class="col-sm-6 wedding-row__element float-left">
+                    <div class="col-sm-6">
+                        <span><strong>Jesse Ruben</strong></span>
+                        <span>Singer, songwriter, guitarist, master of jigsaw puzzles and generally interested in any new adventure.</span>
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="party-pic" src="images/party/jesse.jpg">
+                    </div>
+                </div>
+                <div class="col-sm-6 wedding-row__element float-right">
+                    <div class="col-sm-6">
+                        <span><strong>Medini Ciavardone</strong></span>
+                        <span>#1 fashion and wedding consultant. Oldest friend, etc.</span>
+                    </div>
+                    <div class="col-sm-6">
+                        <img class="party-pic" src="images/party/medini.jpg">
+                    </div>
+                </div>
+            </div>
             <div class="party-member__row">
                 <div class="groomsman__container">
                     <img class="party-member groomsman__img" src="images/party/jesse.jpg" alt="Jesse Ruben" />
