Finished cleaning up the bridal party pics page

--- a/bridal-party.html
+++ b/bridal-party.html
@@ -74,130 +74,133 @@
             </div>
 
             <div class="row">
-                <div class="col-sm-6 wedding-row__element float-left">
-                    <div class="col-sm-6">
-                        <span><strong>Jesse Ruben</strong></span>
-                        <span>Singer, songwriter, guitarist, master of jigsaw puzzles and generally interested in any new adventure.</span>
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 groomsman__info">
+                        <div class="party-member__name"><strong>Jesse Ruben</strong></div>
+                        <div>Eric's friend from childhood</div>
+                        <div>Singer, songwriter, guitarist, master of jigsaw puzzles and generally interested in any new adventure.</div>
                     </div>
-                    <div class="col-sm-6">
-                        <img class="party-pic" src="images/party/jesse.jpg">
-                    </div>
-                </div>
-                <div class="col-sm-6 wedding-row__element float-right">
-                    <div class="col-sm-6">
-                        <span><strong>Medini Ciavardone</strong></span>
-                        <span>#1 fashion and wedding consultant. Oldest friend, etc.</span>
-                    </div>
-                    <div class="col-sm-6">
-                        <img class="party-pic" src="images/party/medini.jpg">
+                    <div class="col-sm-6 groomsman__info">
+                        <img class="party-member__img" src="images/party/jesse.jpg">
                     </div>
                 </div>
-            </div>
-            <div class="party-member__row">
-                <div class="groomsman__container">
-                    <img class="party-member groomsman__img" src="images/party/jesse.jpg" alt="Jesse Ruben" />
-                    <div class="groomsman__info">
-                        <div class="groomsman__name"><strong>Jesse Ruben</strong></div>
-                        <div class="groomsman__relation">Eric's friend from childhood</div>
-                        <div class="groomsman__description">Singer, songwriter, guitarist, master of jigsaw puzzles and generally interested in any new adventure.</div>
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 bridesmaid__info">
+                        <div class="party-member__name"><strong>Medini Ciavardone</strong></div>
+                        <div>Gopi's oldest friend and partner in crime since childhood. #1 fashion/wedding consultant, China Cola fan and wheat-free dessert enthusiast.</div>
                     </div>
-                </div>
-                <div class="bridesmaid__container">
-                    <img class="party-member bridesmaid__img" src="images/party/medini.jpg" alt="Medini Ciavardone" />
-                    <div class="bridesmaid__info">
-                        <div class="bridesmaid__name"><strong>Medini Ciavardone</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from childhood</div>
-                        <div class="bridesmaid__description">Gopi's oldest friend and partner in crime since childhood. #1 fashion/wedding consultant, China Cola fan and wheat-free dessert enthusiast.</div>
+                    <div class="col-sm-6 bridesmaid__info">
+                        <img class="party-member__img" src="images/party/medini.jpg">
                     </div>
                 </div>
             </div>
-            <div class="party-member__row">
-                <div class="groomsman__container">
-                    <img class="party-member groomsman__img" src="images/party/scott.jpg" alt="Scott Connelly" />
-                    <div class="groomsman__info">
-                        <div class="groomsman__name"><strong>Scott Connelly</strong></div>
-                        <div class="groomsman__relation">Eric's younger brother</div>
-                        <div class="groomsman__description">Creative writer and novellist. Talented martial artist and Teddy Roosevelt admirer.</div>
+            <div class="row">
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 groomsman__info">
+                        <div class="party-member__name"><strong>Scott Connelly</strong></div>
+                        <div>Eric's younger brother</div>
+                        <div>Creative writer and novellist. Talented martial artist and Teddy Roosevelt admirer.</div>
+                    </div>
+                    <div class="col-sm-6 groomsman__info">
+                        <img class="party-member__img" src="images/party/scott.jpg">
                     </div>
                 </div>
-                <div class="bridesmaid__container">
-                    <img class="party-member bridesmaid__img" src="images/party/lex.jpg" alt="Alexis Patten" />
-                    <div class="bridesmaid__info">
-                        <div class="bridesmaid__name"><strong>Alexis Patten</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from middle school</div>
-                        <div class="bridesmaid__description">Life of the party since their 7th grade social studies project and high school field hockey days.</div>
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 bridesmaid__info">
+                        <div class="party-member__name"><strong>Alexis Patten</strong></div>
+                        <div>Gopi's friend from middle school</div>
+                        <div>Life of the party since their 7th grade social studies project and high school field hockey days.</div>
                     </div>
-                </div>
-            </div>
-            <div class="party-member__row">
-                <div class="groomsman__container">
-                    <img class="party-member groomsman__img" src="images/party/ian.jpg" alt="Ian Connelly" />
-                    <div class="groomsman__info">
-                        <div class="groomsman__name"><strong>Ian Connelly</strong></div>
-                        <div class="groomsman__relation">Eric's youngest brother</div>
-                        <div class="groomsman__description">Film screenwriter with excellent taste in clothes, music and youtube videos.</div>
-                    </div>
-                </div>
-                <div class="bridesmaid__container">
-                    <img class="party-member bridesmaid__img" src="images/party/melanie.jpg" alt="Melanie Hyman" />
-                    <div class="bridesmaid__info">
-                        <div class="bridesmaid__name"><strong>Melanie Hyman</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from college</div>
-                        <div class="bridesmaid__description">PhD student in public health and Gopi's life-twin. They share the same sports awards, college degrees, hobbies and general opinions about everything.</div>
+                    <div class="col-sm-6 bridesmaid__info">
+                        <img class="party-member__img" src="images/party/lex.jpg">
                     </div>
                 </div>
             </div>
-            <div class="party-member__row">
-                <div class="groomsman__container">
-                    <img class="party-member groomsman__img" src="images/party/jason.jpg" alt="Jason Rose" />
-                    <div class="groomsman__info">
-                        <div class="groomsman__name"><strong>Jason Rose</strong></div>
-                        <div class="groomsman__relation">Eric's friend from high school</div>
-                        <div class="groomsman__description">Philly expert, poker player extraordinaire and all-star dad.</div>
+            <div class="row">
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 groomsman__info">
+                        <div class="party-member__name"><strong>Ian Connelly</strong></div>
+                        <div>Eric's youngest brother</div>
+                        <div>Film screenwriter with excellent taste in clothes, music and youtube videos.</div>
+                    </div>
+                    <div class="col-sm-6 groomsman__info">
+                        <img class="party-member__img" src="images/party/ian.jpg">
                     </div>
                 </div>
-                <div class="bridesmaid__container">
-                    <img class="party-member bridesmaid__img" src="images/party/amanda.jpg" alt="Amanda Baryshyan" />
-                    <div class="bridesmaid__info">
-                        <div class="bridesmaid__name"><strong>Amanda Baryshyan</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from college</div>
-                        <div class="bridesmaid__description">Doctor of biomedical engineer and new mother. Active experimenter in the lab and with her nacho creations.</div>
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 bridesmaid__info">
+                        <div class="party-member__name"><strong>Melanie Hyman</strong></div>
+                        <div>Gopi's friend from college</div>
+                        <div>PhD student in public health and Gopi's life-twin. They share the same sports awards, college degrees, hobbies and general opinions about everything.</div>
                     </div>
-                </div>
-            </div>
-            <div class="party-member__row">
-                <div class="groomsman__container">
-                    <img class="party-member groomsman__img" src="images/party/jake.jpg" alt="Jake Horenstein" />
-                    <div class="groomsman__info">
-                        <div class="groomsman__name"><strong>Jake Horenstein</strong></div>
-                        <div class="groomsman__relation">Eric's friend from high school</div>
-                        <div class="groomsman__description">Analyst, critic and fan of everything from sports to comedy to music.</div>
-                    </div>
-                </div>
-                <div class="bridesmaid__container">
-                    <img class="party-member bridesmaid__img" src="images/party/maggie.jpg" alt="Maggie Kissel" />
-                    <div class="bridesmaid__info">
-                        <div class="bridesmaid__name"><strong>Maggie Kissel</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from medical school</div>
-                        <div class="bridesmaid__description">Fellow pediatrician and expert at keeping Gopi sane throughout medical training.</div>
+                    <div class="col-sm-6 bridesmaid__info">
+                        <img class="party-member__img" src="images/party/melanie.jpg">
                     </div>
                 </div>
             </div>
-            <div class="party-member__row">
-                <div class="groomsman__container">
-                    <img class="party-member groomsman__img" src="images/party/bryan.jpg" alt="Bryan Latshaw" />
-                    <div class="groomsman__info">
-                        <div class="groomsman__name"><strong>Bryan Latshaw</strong></div>
-                        <div class="groomsman__relation">Eric's friend from high school</div>
-                        <div class="groomsman__description">Successful engineer, despite his best efforts. Enjoys his budding gun collection and riding the bus.</div>
+            <div class="row">
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 groomsman__info">
+                        <div class="party-member__name"><strong>Jason Rose</strong></div>
+                        <div>Eric's friend from high school</div>
+                        <div>Philly expert, poker player extraordinaire and all-star dad.</div>
+                    </div>
+                    <div class="col-sm-6 groomsman__info">
+                        <img class="party-member__img" src="images/party/jason.jpg">
                     </div>
                 </div>
-                <div class="bridesmaid__container">
-                    <img class="party-member bridesmaid__img" src="images/party/melissa.jpg" alt="Melissa Niedfeld" />
-                    <div class="bridesmaid__info">
-                        <div class="bridesmaid__name"><strong>Melissa Niedfeld</strong></div>
-                        <div class="bridesmaid__relation">Gopi's friend from medical school</div>
-                        <div class="bridesmaid__description">Fellow pediatrician and expert online shopper, particularly during board exam studying.</div>
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 bridesmaid__info">
+                        <div class="party-member__name"><strong>Amanda Baryshyan</strong></div>
+                        <div>Gopi's friend from college</div>
+                        <div>Doctor of biomedical engineer and new mother. Active experimenter in the lab and with her nacho creations.</div>
+                    </div>
+                    <div class="col-sm-6 bridesmaid__info">
+                        <img class="party-member__img" src="images/party/amanda.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 groomsman__info">
+                        <div class="party-member__name"><strong>Jake Horenstein</strong></div>
+                        <div>Eric's friend from high school</div>
+                        <div>Analyst, critic and fan of everything from sports to comedy to music.</div>
+                    </div>
+                    <div class="col-sm-6 groomsman__info">
+                        <img class="party-member__img" src="images/party/jake.jpg">
+                    </div>
+                </div>
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 bridesmaid__info">
+                        <div class="party-member__name"><strong>Maggie Kissel</strong></div>
+                        <div>Gopi's friend from medical school</div>
+                        <div>Fellow pediatrician and expert at keeping Gopi sane throughout medical training.</div>
+                    </div>
+                    <div class="col-sm-6 bridesmaid__info">
+                        <img class="party-member__img" src="images/party/maggie.jpg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 groomsman__info">
+                        <div class="party-member__name"><strong>Bryan Latshaw</strong></div>
+                        <div>Eric's friend from high school</div>
+                        <div>Successful engineer, despite his best efforts. Enjoys his budding gun collection and riding the bus.</div>
+                    </div>
+                    <div class="col-sm-6 groomsman__info">
+                        <img class="party-member__img" src="images/party/bryan.jpg">
+                    </div>
+                </div>
+                <div class="col-sm-6 party-member__container">
+                    <div class="col-sm-6 bridesmaid__info">
+                        <div class="party-member__name"><strong>Melissa Niedfeld</strong></div>
+                        <div>Gopi's friend from medical school</div>
+                        <div>Fellow pediatrician and expert online shopper, particularly during board exam studying.</div>
+                    </div>
+                    <div class="col-sm-6 bridesmaid__info">
+                        <img class="party-member__img" src="images/party/melissa.jpg">
                     </div>
                 </div>
             </div>
